Added initial Raster, RasterCell, and InfiniteGrid structure

--- a/src/Themis.Raster/Themis.Raster.csproj
+++ b/src/Themis.Raster/Themis.Raster.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="MathNet.Numerics" Version="4.15.0" />
+    <PackageReference Include="Themis.Geometry" Version="2022.3.21" />
   </ItemGroup>
 
 </Project>
